--- a/Portfolio.css
+++ b/Portfolio.css
@@ -88,7 +88,8 @@ nav ul li a:hover{
 .main-text p{
     color: #747474;
 }
-.portfolio-btn{
+.portfolio-btn,
+.recent-btn{
     width: 190px;
     height: 44px;
     display: flex;
@@ -99,7 +100,8 @@ nav ul li a:hover{
     border-radius: 20px;
     box-shadow: 4px 10px 30px rgba(24, 139, 119, 0.2);
 }
-.portfolio-btn:hover{
+.portfolio-btn:hover,
+.recent-btn:hover{
     background-color: #23cdaf;
     transition: all ease 0.2s;
 }
@@ -174,4 +176,80 @@ nav ul li a:hover{
 }
 .fa-js-square{
     color: #f98231;
+}
+#recent{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0px;
+    flex-direction: column;
+}
+.recent-heading span,
+.client-heading span{
+    color: #36b7b5;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 1.1rem;
+}
+.recent-heading h3,
+.client-heading h3{
+    color: #1c3548;
+    font-size: 3rem;
+    margin: 0px;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+.recent-img{
+    margin: 0px 40px;
+}
+.recent-img img{
+    width: 100%;
+    height: 100%;
+}
+.recent-btn{
+    width: 190px;
+    margin-top: -20px;
+}
+#client{
+    width: 100%;
+    border-top: 1px solid rgba(58, 58, 58, 0.03);
+    border-bottom: 1px solid rgba(58, 58, 58, 0.03);
+    padding: 50px 0px;
+    background-image: url();
+    background-position: center;
+    background-size: 1000px;
+}
+.client-heading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.c-box-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 20px 0px;
+
+}
+.client-box{
+    width: 310px;
+    height: 350px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px;
+    margin: 20px;
+    box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.8);
+}
+.client-box img{
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    object-fit: cover;
 }
